--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -25,4 +25,7 @@ jobs:
       
       - name: Setup Pester and PSScriptAnalyzer
         if: github.event_name == 'pull_request'
-        
+        uses: zyborg/pester-tests-report@v1.5.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          include_paths: tests
