--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Setup Pester and PSScriptAnalyzer
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' || 'workflow_dispatch'
         uses: zyborg/pester-tests-report@v1.5.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
