--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -28,4 +28,4 @@ jobs:
         uses: zyborg/pester-tests-report@v1.5.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          include_paths: tests
+          include_paths: "*/Tests/*"
