Added APF and new function to automate packaging using the framework

--- a/src/modules/tatux.intune.packaging/Templates/Application/config.installer.json
+++ b/src/modules/tatux.intune.packaging/Templates/Application/config.installer.json
@@ -1,10 +1,10 @@
 {
-    "name": "",
-    "filename": "",
+    "name": "##NAME_TEMPLATE",
+    "filename": "##FILENAME_TEMPLATE",
     "installswitches": "",
     "uninstallswitches": "",
     "uninstallpath": "",
-    "version": "",
+    "version": "##VERSION_TEMPLATE",
     "precommandfile": "Intune-Pre-Install.ps1",
     "postcommandfile": "Intune-Post-Install.ps1",
 	"target": "",
