--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload specific folder path in the repo
-          path: './src/onlinehelp'
+          path: 'src/onlinehelp'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
