--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -34,6 +34,7 @@ jobs:
             $folderName = $_.Name
             $gistFolderPath = "./src/onlinehelp/gist/$folderName"
               if (-not (Test-Path $gistFolderPath)) {
+                Write-output "Creating $gistFolderPath"
                 New-Item -ItemType Directory -Path $gistFolderPath -Force
               }
             }
@@ -45,6 +46,7 @@ jobs:
             $gistFolderPath = "./src/onlinehelp/gist/$folderName/"
             $mdfiles = Get-ChildItem -Path $docsFolderPath -Filter *.md
               foreach ($mdfile in $mdfiles) {
+                Write-output "Copying $mdfile to $gistFolderPath"
                 Copy-Item -Path $mdfile.FullName -Destination $gistFolderPath -Force
               }
             }
@@ -56,6 +58,7 @@ jobs:
             $gistFolderPath = "./src/onlinehelp/gist/$($folder.Name)"
             $mainmdfile = "$gistFolderPath/$($folder.Name).md"
             $indexmdfile = "$gistFolderPath/index.md"
+            Write-output "Renaming $mainmdfile to $indexmdfile"
             Rename-Item -Path $mainmdfile -NewName $indexmdfile -Force
           }
 
