--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -67,13 +67,7 @@ jobs:
                 Write-Output "Skipping renaming $mainmdfile as it is a directory"
               } else {
                 Write-Output "Renaming $mainmdfile to $indexmdfile"
-                try {
-                  Rename-Item -Path $mainmdfile -NewName $indexmdfile -Force
-                } catch {
-                  Write-Output "Failed to rename $mainmdfile to $indexmdfile"
-                  Write-Output $_.Exception.Message
-                  throw $_.Exception
-                }
+                Rename-Item -Path $mainmdfile -NewName "index.md" -Force
               }
             } else {
               Write-Output "$mainmdfile does not exist"
