--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --source ./src/onlinehelp/gist --baseurl "/gist/"
+        run: bundle exec jekyll build --source ./src/gh_pages --destination ./src/onlinehelp/_site
         env:
           JEKYLL_ENV: production
 
@@ -53,9 +53,9 @@ jobs:
 
       - name: Create Folders in main site structure
         run: |
-            Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "gist" } | ForEach-Object {
+            Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" } | ForEach-Object {
             $folderName = $_.Name
-            $gistFolderPath = "./src/onlinehelp/gist/$folderName"
+            $gistFolderPath = "./src/onlinehelp/_site/$folderName"
               if (-not (Test-Path $gistFolderPath)) {
                 Write-output "Creating $gistFolderPath"
                 New-Item -ItemType Directory -Path $gistFolderPath -Force
@@ -63,10 +63,10 @@ jobs:
             }
       - name: Copy .md files to each gist folder
         run: |
-            Get-ChildItem -Path ./src/onlinehelp | Where-Object { $_.Name -ne "gist" } | ForEach-Object {
+            Get-ChildItem -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" } | ForEach-Object {
             $folderName = $_.Name
             $docsFolderPath = "./src/onlinehelp/$folderName/docs/"
-            $gistFolderPath = "./src/onlinehelp/gist/$folderName/"
+            $gistFolderPath = "./src/onlinehelp/_site/$folderName/"
             $mdfiles = Get-ChildItem -Path $docsFolderPath -Filter *.md
               foreach ($mdfile in $mdfiles) {
                 Write-output "Copying $mdfile to $gistFolderPath"
@@ -76,9 +76,9 @@ jobs:
 
       - name: Change the name of the .md file to index.md
         run: |
-          $Folders = Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "gist" }
+          $Folders = Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" }
           foreach ($folder in $Folders) {
-            $gistFolderPath = "./src/onlinehelp/gist/$($folder.Name)"
+            $gistFolderPath = "./src/onlinehelp/_site/$($folder.Name)"
             $mainmdfile = "$gistFolderPath/$($folder.Name).md"
             $indexmdfile = "$gistFolderPath/index.md"
             if (Test-Path $mainmdfile) {
