--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --source ./src/gh_pages --destination ./src/onlinehelp/_site
+        run: bundle exec jekyll build --source ./src/gh_pages/ --destination ./src/onlinehelp/_site/
         env:
           JEKYLL_ENV: production
 
