--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -60,7 +60,7 @@ jobs:
           git add .
           git commit -m "Updated Github Pages content in commit $GITHUB_SHA"
           git push
-          echo "::set-output name=commit_id::$(git rev-parse HEAD)"
+          echo "{commit_id}={$(git rev-parse HEAD)}" >> $GITHUB_OUTPUT
 
   SiteStructure:
     needs: Build
@@ -125,7 +125,7 @@ jobs:
           git add .
           git commit -m "Updated Github Pages content in commit $GITHUB_SHA"
           git push
-          echo "::set-output name=commit_id::$(git rev-parse HEAD)"
+          echo "{commit_id}={$(git rev-parse HEAD)}" >> $GITHUB_OUTPUT
               
   deploy:
     needs: [Build, SiteStructure]
