--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
         working-directory: ./src/gh_pages
-        run: bundle exec jekyll build --source . --destination ../onlinehelp/_site/
+        run: bundle exec jekyll build --source . --destination ../../_site/
         env:
           JEKYLL_ENV: production
 
@@ -73,9 +73,9 @@ jobs:
 
       - name: Create Folders in main site structure
         run: |
-            Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" } | ForEach-Object {
+            Get-ChildItem -Directory -Path ./src/onlinehelp | ForEach-Object {
             $folderName = $_.Name
-            $gistFolderPath = "./src/onlinehelp/_site/$folderName"
+            $gistFolderPath = "./_site/$folderName"
               if (-not (Test-Path $gistFolderPath)) {
                 Write-output "Creating $gistFolderPath"
                 New-Item -ItemType Directory -Path $gistFolderPath -Force
@@ -83,10 +83,10 @@ jobs:
             }
       - name: Copy .md files to each gist folder
         run: |
-            Get-ChildItem -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" } | ForEach-Object {
+            Get-ChildItem -Path ./src/onlinehelp | ForEach-Object {
             $folderName = $_.Name
             $docsFolderPath = "./src/onlinehelp/$folderName/docs/"
-            $gistFolderPath = "./src/onlinehelp/_site/$folderName/"
+            $gistFolderPath = "./_site/$folderName/"
             $mdfiles = Get-ChildItem -Path $docsFolderPath -Filter *.md
               foreach ($mdfile in $mdfiles) {
                 Write-output "Copying $mdfile to $gistFolderPath"
@@ -96,9 +96,9 @@ jobs:
 
       - name: Change the name of the .md file to index.md
         run: |
-          $Folders = Get-ChildItem -Directory -Path ./src/onlinehelp | Where-Object { $_.Name -ne "_site" }
+          $Folders = Get-ChildItem -Directory -Path ./src/onlinehelp |
           foreach ($folder in $Folders) {
-            $gistFolderPath = "./src/onlinehelp/_site/$($folder.Name)"
+            $gistFolderPath = "./_site/$($folder.Name)"
             $mainmdfile = "$gistFolderPath/$($folder.Name).md"
             $indexmdfile = "$gistFolderPath/index.md"
             if (Test-Path $mainmdfile) {
@@ -144,7 +144,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload specific folder path in the repo
-          path: 'src/onlinehelp/_site/'
+          path: '_site/'
 
       - name: Deploy to GitHub Pages
         id: deployment
