--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -26,6 +26,8 @@ concurrency:
 jobs:
   Build:
     runs-on: ubuntu-latest
+    outputs:
+      commit_id: ${{ steps.commit.outputs.commit_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -65,6 +67,8 @@ jobs:
   SiteStructure:
     needs: Build
     runs-on: windows-latest
+    outputs:
+      commit_id: ${{ steps.commit.outputs.commit_id }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
