--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -62,7 +62,8 @@ jobs:
           git add .
           git commit -m "Updated Github Pages content in commit $GITHUB_SHA"
           git push
-          echo "{commit_id}={$(git rev-parse HEAD)}" >> $GITHUB_OUTPUT
+          ID=$(git rev-parse HEAD)
+          echo "{commit_id}=$ID" >> $GITHUB_OUTPUT
 
   SiteStructure:
     needs: Build
@@ -129,7 +130,8 @@ jobs:
           git add .
           git commit -m "Updated Github Pages content in commit $GITHUB_SHA"
           git push
-          echo "{commit_id}={$(git rev-parse HEAD)}" >> $GITHUB_OUTPUT
+          ID=$(git rev-parse HEAD)
+          echo "{commit_id}=$ID" >> $GITHUB_OUTPUT
               
   deploy:
     needs: [Build, SiteStructure]
