--- a/.github/workflows/PowerShell_Help.yml
+++ b/.github/workflows/PowerShell_Help.yml
@@ -130,7 +130,7 @@ jobs:
           git config --global user.name "Nigel Tatschner"
           git add .
           git commit -m "Updated Github Pages content in commit $GITHUB_SHA"
-          git push
+          git push origin HEAD:main
           echo "commit_id=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
               
   deploy:
