--- a/.github/workflows/PSHelpSite.yml
+++ b/.github/workflows/PSHelpSite.yml
@@ -81,7 +81,7 @@ jobs:
         run: |
             Get-ChildItem -Directory -Path ./src/onlinehelp | ForEach-Object {
             $folderName = $_.Name
-            $gistFolderPath = $(Join-Path -Path ${{ github.workspace }} -ChildPath "/_site/$folderName")
+            $gistFolderPath = $(Join-Path -Path ${{ github.workspace }} -ChildPath "/_site/pages/$folderName")
               if (-not (Test-Path $gistFolderPath)) {
                 Write-output "Creating $gistFolderPath"
                 New-Item -ItemType Directory -Path $gistFolderPath -Force
@@ -90,32 +90,31 @@ jobs:
       - name: Copy .md files to each gist folder
         run: |
             Get-ChildItem -Path ./src/onlinehelp | ForEach-Object {
-            $folderName = $_.Name
-            $docsFolderPath = $(Get-Item -Path "./src/onlinehelp/$folderName/docs/")
-            $filesFolderPath = $(Get-item -Path "./src/onlinehelp/$folderName/files/")
-            $gistFolderPath = $(Join-Path -Path ${{ github.workspace }} -ChildPath "/_site/$folderName")
-            $gistFilesFolderPath = $(Join-Path -Path $gistFolderPath -ChildPath "files/")
-            $mdfiles = Get-ChildItem -Path $docsFolderPath -Filter *.md
+              $folderName = $_.Name
+              $docsFolderPath = $(Get-Item -Path "./src/onlinehelp/$folderName/docs/")
+              $filesFolderPath = $(Get-item -Path "./src/onlinehelp/$folderName/files/")
+              $gistFolderPath = $(Join-Path -Path ${{ github.workspace }} -ChildPath "/_site/pages/$folderName")
+              $gistFilesFolderPath = $(Join-Path -Path $gistFolderPath -ChildPath "files/")
+              $mdfiles = Get-ChildItem -Path $docsFolderPath -Filter *.md
+
               foreach ($mdfile in $mdfiles) {
                 Write-output "Copying $mdfile to $gistFolderPath"
                 Copy-Item -Path $mdfile.FullName -Destination $gistFolderPath -Force
               }
+
               if (-not (Test-Path $gistFilesFolderPath)) {
                 Write-output "Creating $gistFilesFolderPath"
                 New-Item -ItemType Directory -Path $gistFilesFolderPath -Force
               }
+
               $files = Get-ChildItem -Path $filesFolderPath -Recurse
+
               foreach ($file in $files) {
-                $relativePath = $file.FullName.Replace($filesFolderPath, '')
-                $destinationPath = Join-Path -Path $gistFilesFolderPath -ChildPath $relativePath
-              
+                $destinationPath = Join-Path -Path $gistFilesFolderPath -ChildPath $file.Name
+
                 if (Test-Path $destinationPath) {
                   Write-output "Skipping $file as it already exists"
                 } else {
-                  $destinationDirectory = Split-Path -Path $destinationPath -Parent
-                  if (!(Test-Path $destinationDirectory)) {
-                    New-Item -ItemType Directory -Path $destinationDirectory | Out-Null
-                  }
                   Write-output "Copying $file to $destinationPath"
                   Copy-Item -Path $file.FullName -Destination $destinationPath -Force
                 }
