--- a/src/PSHelpSite/_data/topnav.yml
+++ b/src/PSHelpSite/_data/topnav.yml
@@ -3,32 +3,22 @@
 topnav:
 - title: Topnav
   items:
-    - title: GitHub
-      external_url: https://github.com/tomjoht/documentation-theme-jekyll
-    - title: News
-      url: /news
+  - title: GitHub
+    external_url: https://https://github.com/ntatschner/Intune-Utils
+  - title: News
+    url: /news
 
 #Topnav dropdowns
 topnav_dropdowns:
 - title: Topnav dropdowns
   folders:
-    - title: Jekyll Help
-      folderitems:
-        - title: Jekyll Talk
-          external_url: https://talk.jekyllrb.com
-        - title: Jekyll documentation
-          external_url: http://jekyllrb.com/docs/home/
-        - title: Jekyll on Stack Overflow
-          external_url: http://stackoverflow.com/questions/tagged/jekyll
-        - title: Jekyll on my blog
-          external_url: http://idratherbewriting.com/category-jekyll/
-    - title: Products
-      folderitems:
-        - title: Jekyll Documentation Theme
-          url: /mydoc_introduction.html
-        - title: Product 1
-          url: /p1_landing_page.html
-        - title: Product 2
-          url: /p2_landing_page.html
+  - title: External Links
+    folderitems:
+    - title: Updatable Help for PowerShell Modules
+      external_url: https://learn.microsoft.com/en-us/powershell/scripting/developer/help/writing-help-for-windows-powershell-modules?view=powershell-7.4
+    - title: Creating Updateable Help Files using PlatyPS
+      external_url: https://learn.microsoft.com/en-us/powershell/utility-modules/platyps/create-help-using-platyps?view=ps-modules
+    - title: My Nerd Emporium
+      external_url: https://tatux.in/
 
 # Copyright 2021 Google LLC
