Updated the workflow to try and generate page links

--- a/.github/workflows/PSHelpSite.yml
+++ b/.github/workflows/PSHelpSite.yml
@@ -143,6 +143,10 @@ jobs:
               Write-Output "$mainmdfile does not exist"
             }
           }
+      - name: Generate Directory Listings
+        uses: jayanta525/github-pages-directory-listing@v4.0.0
+        with:
+          FOLDER: ${{ github.workspace }}/_site/pages
 
       - name: Commit changes
         id: commit
