Updated somemore site stuff

--- a/src/PSHelpSite/_config.yml
+++ b/src/PSHelpSite/_config.yml
@@ -73,7 +73,7 @@ defaults:
     comments: true
     # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
     search: true
-    sidebar: home_sidebar
+    sidebar: main
     topnav: topnav
 - scope:
     path: ""
@@ -91,19 +91,17 @@ defaults:
     comments: true
     # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
     search: true
-    sidebar: home_sidebar
+    sidebar: main
     topnav: topnav
 
 # these are defaults used for the frontmatter for these file types
 
 sidebars:
 - home_sidebar
-- mydoc_sidebar
-- product1_sidebar
-- product2_sidebar
+- main_sidebar
 - other
 
-description: "Intended as a documentation theme based on Jekyll for technical writers documenting software and other technical products, this theme has all the elements you would need to handle multiple products with both multi-level sidebar navigation, tags, and other documentation features."
+description: "Intune Utilities is a collection of PowerShell modules that help you manage Microsoft Intune."
 # the description is used in the feed.xml file
 
 # needed for sitemap.xml file only
