--- a/src/PSHelpSite/_data/sidebars/main_sidebar.yml
+++ b/src/PSHelpSite/_data/sidebars/main_sidebar.yml
@@ -2,8 +2,8 @@
 
 entries:
 - title: sidebar
-  product: Jekyll Doc Theme
-  version: 6.0
+  product: Intune Utilities
+  version: 1.0
   folders:
 
   - title:
@@ -19,3 +19,15 @@ entries:
       output: pdf
       type: frontmatter
 
+  - title: Overview
+    output: web, pdf
+    folderitems:
+
+    - title: Table of Contents
+      url: /index.html
+      output: web, pdf
+      type: homepage
+
+    - title: Module tatux.intune.packaging
+      url: /pages/tatux.intune.packaging/tatux.intune.packaging.html
+      output: web, pdf
