Updated somemore site stuff

--- a/.github/workflows/PSHelpSite.yml
+++ b/.github/workflows/PSHelpSite.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Generate Directory Listings
         uses: jayanta525/github-pages-directory-listing@v4.0.0
         with:
-          FOLDER: ${{ github.workspace }}/_site/pages
+          FOLDER: '_site/pages'
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
