Updated somemore site stuff

--- a/src/PSHelpSite/_data/sidebars/main_sidebar.yml
+++ b/src/PSHelpSite/_data/sidebars/main_sidebar.yml
@@ -33,5 +33,13 @@ entries:
     output: web, pdf
     folderitems:
 
+    - title: New-APFDeployment
+      url: /pages/tatux.intune.packaging/docs/New-APFDeployment.html
+      output: web, pdf
+      type: cmdlet
 
+    - title: Get-MSIProperties
+      url: /pages/tatux.intune.packaging/docs/Get-MSIProperties.html
+      output: web, pdf
+      type: cmdlet
 
