--- a/src/PSHelpSite/_config.yml
+++ b/src/PSHelpSite/_config.yml
@@ -70,10 +70,10 @@ defaults:
     type: "pages"
   values:
     layout: "page"
-    comments: true
+    comments: false
     # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
     search: true
-    sidebar: main
+    sidebar: main_sidebar
     topnav: topnav
 - scope:
     path: ""
@@ -88,10 +88,10 @@ defaults:
     type: "posts"
   values:
     layout: "post"
-    comments: true
+    comments: false
     # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
     search: true
-    sidebar: main
+    sidebar: main_sidebar
     topnav: topnav
 
 # these are defaults used for the frontmatter for these file types
