--- a/src/PSHelpSite/_config.yml
+++ b/src/PSHelpSite/_config.yml
@@ -10,13 +10,6 @@ site_title: Intune Utilities
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
 company_name: Tatux Solutions
-# this appears in the footer
-
-github_editme_path: ''
-# if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
-
-# gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
-# if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 google_analytics: G-DSHHPKY546
 # if you have google-analytics ID, put it in. if not, edit this value to blank.
@@ -41,7 +34,7 @@ feedback_email: nigel@tatux.co.uk
 # feedback_disable: true
 # if you uncomment the previous line, the Feedback link gets removed
 
-feedback_text: "Need help?"
+feedback_text: "Need help? Have a Question?"
 # if you uncomment the previous line, it changes the Feedback text
 
 feedback_link: "https://tatux.in/"
