--- a/src/PSHelpSite/_data/sidebars/main_sidebar.yml
+++ b/src/PSHelpSite/_data/sidebars/main_sidebar.yml
@@ -29,17 +29,17 @@ entries:
       type: homepage
 
   - title: Module tatux.intune.packaging
-    url: /pages/tatux.intune.packaging/docs/tatux.intune.packaging.html
+    url: /tatux.intune.packaging.html
     output: web, pdf
     folderitems:
 
     - title: New-APFDeployment
-      url: /pages/tatux.intune.packaging/docs/New-APFDeployment.html
+      url: /New-APFDeployment.html
       output: web, pdf
       type: cmdlet
 
     - title: Get-MSIProperties
-      url: /pages/tatux.intune.packaging/docs/Get-MSIProperties.html
+      url: /Get-MSIProperties.html
       output: web, pdf
       type: cmdlet
 
