--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -63,3 +63,33 @@ jobs:
             }
           }
 
+  Publish:
+    runs-on: windows-latest
+    needs: RunTests
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Test if Published Version is matches repo version
+        id: version
+        run: |
+          foreach ($module in (Get-ChildItem -Path .\src\modules\ -Directory)) {
+            $ModuleName = $module.Name
+            $repoVersion = (Import-PowerShellDataFile -Path .\src\modules\$ModuleName\$ModuleName.psd1).ModuleVersion
+            try {
+              $publishedVersion = (Find-Module -Name $ModuleName -ErrorAction Stop).Version
+            } catch {
+              Write-Output "Module $ModuleName not found in PSGallery, creating new module version $repoVersion"
+            }
+            if ($repoVersion -gt $publishedVersion -or $publishedVersion -eq $null) {
+              Write-Output "Publishing module $ModuleName version $repoVersion"
+              try {
+                Publish-PSResource -Path .\src\modules\$ModuleName -Repository PSGallery -ApiKey ${{ secrets.API_KEY }}
+              } catch {
+                Write-Error "Failed to publish module $ModuleName"
+              }
+            } else {
+              Write-Output "Published version ($publishedVersion) matches repo version ($repoVersion)"
+            }
+          }
+
+
