--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -69,7 +69,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Test if Published Version is matches repo version
+      - name: Test and Publish modules
         id: version
         run: |
           foreach ($module in (Get-ChildItem -Path .\src\modules\ -Directory)) {
@@ -83,9 +83,9 @@ jobs:
             if ($repoVersion -gt $publishedVersion -or $publishedVersion -eq $null) {
               Write-Output "Publishing module $ModuleName version $repoVersion"
               try {
-                Publish-PSResource -Path .\src\modules\$ModuleName -Repository PSGallery -ApiKey ${{ secrets.API_KEY }}
+                Publish-PSResource -Path .\src\modules\$ModuleName -Repository PSGallery -ApiKey ${{ secrets.API_KEY }} -ErrorAction Stop
               } catch {
-                Write-Error "Failed to publish module $ModuleName"
+                Write-Error "Failed to publish module $ModuleName. Error: $_"
               }
             } else {
               Write-Output "Published version ($publishedVersion) matches repo version ($repoVersion)"
