--- a/src/PSHelpSite/_data/sidebars/main_sidebar.yml
+++ b/src/PSHelpSite/_data/sidebars/main_sidebar.yml
@@ -36,10 +36,10 @@ entries:
     - title: New-APFDeployment
       url: /pages/tatux.intune.packaging/docs/New-APFDeployment.html
       output: web, pdf
-      type: cmdlet
+      type: helpfile
 
     - title: Get-MSIProperties
       url: /pages/tatux.intune.packaging/docs/Get-MSIProperties.html
       output: web, pdf
-      type: cmdlet
+      type: helpfile
 
