--- a/.github/workflows/TestandPublish.yml
+++ b/.github/workflows/TestandPublish.yml
@@ -14,7 +14,8 @@ on:
 jobs:
   RunTests:
     runs-on: windows-latest
-
+    outputs:
+      module_directories: ${{ steps.modulepaths.outputs.module_directories }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup PowerShell module cache
@@ -64,56 +65,62 @@ jobs:
             }
           }
 
-      - name: Validate Module Manifest
+      - name: Get All Module Paths
+        id: modulepaths
         shell: pwsh
         run: |
-          Get-ChildItem -Path .\src\modules\ -Directory | ForEach-Object {
-            $ModuleName = $_.Name
-            Write-Output "Validating module manifest for $ModuleName"
-            Test-ModuleManifest -Path ".\src\modules\$ModuleName\$ModuleName.psd1" -ErrorAction Stop
-          }
+          $modulepaths = Get-ChildItem -Path .\src\modules\ -Directory
+          $outpaths = $modulepaths.FullName -join ','
+          echo "module_directories=$outpaths" >> $GITHUB_OUTPUT
 
   Publish:
-    runs-on: windows-latest
-    needs: RunTests
-    steps:
-      - uses: actions/checkout@v4
+    uses: ntatschner/tatux_shared_workflows/.github/Publish_To_PSGallery.yml@main
+    with:
+      module_path: ${{ needs.RunTests.outputs.module_directories }}
+    secrets:
+      api_key: ${{ secrets.API_KEY }}
 
-      - name: Setup PowerShell module cache
-        id: cacher
-        uses: actions/cache@v3
-        with:
-          path: "~/.local/share/powershell/Modules"
-          key: ${{ runner.os }}-PSScriptAnalyzer
-      - name: Install required PowerShell modules
-        if: steps.cacher.outputs.cache-hit != 'true'
-        shell: pwsh
-        run: |
-          Set-PSRepository PSGallery -InstallationPolicy Trusted
-          Install-Module PSScriptAnalyzer -ErrorAction Stop
-          install-Module -name 'Microsoft.Graph.Intune', 'Microsoft.Graph.Authentication' -ErrorAction Stop 
+  # Publish:
+  #   runs-on: windows-latest
+  #   needs: RunTests
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Test and Publish modules
-        id: version
-        run: |
-          foreach ($module in (Get-ChildItem -Path .\src\modules\ -Directory)) {
-            $ModuleName = $module.Name
-            $repoVersion = (Import-PowerShellDataFile -Path .\src\modules\$ModuleName\$ModuleName.psd1).ModuleVersion
-            try {
-              $publishedVersion = (Find-Module -Name $ModuleName -ErrorAction Stop).Version
-            } catch {
-              Write-Output "Module $ModuleName not found in PSGallery, creating new module version $repoVersion"
-            }
-            if ($repoVersion -gt $publishedVersion -or $publishedVersion -eq $null) {
-              Write-Output "Publishing module $ModuleName version $repoVersion"
-              try {
-                Publish-PSResource -Path .\src\modules\$ModuleName -Repository PSGallery -ApiKey ${{ secrets.API_KEY }} -ErrorAction Stop
-              } catch {
-                Write-Error "Failed to publish module $ModuleName. Error: $_"
-              }
-            } else {
-              Write-Output "Published version ($publishedVersion) matches repo version ($repoVersion)"
-            }
-          }
+  #     - name: Setup PowerShell module cache
+  #       id: cacher
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: "~/.local/share/powershell/Modules"
+  #         key: ${{ runner.os }}-PSScriptAnalyzer
+  #     - name: Install required PowerShell modules
+  #       if: steps.cacher.outputs.cache-hit != 'true'
+  #       shell: pwsh
+  #       run: |
+  #         Set-PSRepository PSGallery -InstallationPolicy Trusted
+  #         Install-Module PSScriptAnalyzer -ErrorAction Stop
+  #         install-Module -name 'Microsoft.Graph.Intune', 'Microsoft.Graph.Authentication' -ErrorAction Stop 
+
+  #     - name: Test and Publish modules
+  #       id: version
+  #       run: |
+  #         foreach ($module in (Get-ChildItem -Path .\src\modules\ -Directory)) {
+  #           $ModuleName = $module.Name
+  #           $repoVersion = (Import-PowerShellDataFile -Path .\src\modules\$ModuleName\$ModuleName.psd1).ModuleVersion
+  #           try {
+  #             $publishedVersion = (Find-Module -Name $ModuleName -ErrorAction Stop).Version
+  #           } catch {
+  #             Write-Output "Module $ModuleName not found in PSGallery, creating new module version $repoVersion"
+  #           }
+  #           if ($repoVersion -gt $publishedVersion -or $publishedVersion -eq $null) {
+  #             Write-Output "Publishing module $ModuleName version $repoVersion"
+  #             try {
+  #               Publish-PSResource -Path .\src\modules\$ModuleName -Repository PSGallery -ApiKey ${{ secrets.API_KEY }} -ErrorAction Stop
+  #             } catch {
+  #               Write-Error "Failed to publish module $ModuleName. Error: $_"
+  #             }
+  #           } else {
+  #             Write-Output "Published version ($publishedVersion) matches repo version ($repoVersion)"
+  #           }
+  #         }
 
 
